--- a/ViewandHire/pom.xml
+++ b/ViewandHire/pom.xml
@@ -44,7 +44,12 @@
     <artifactId>extentreports</artifactId>
     <version>5.0.9</version>
 </dependency>
-
+<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-jar-plugin</artifactId>
+    <version>3.3.0</version>
+</dependency>
 </dependencies>
 <build>
   <plugins>
@@ -56,7 +61,7 @@
      <source>1.8</source>
      <target>1.8</target>
     </configuration>
-   </plugin>
+</plugin>
   </plugins>
  </build>
   </project>
