Commit with Assertion,screenshot and Listener

--- a/ViewandHire/Config.properties
+++ b/ViewandHire/Config.properties
@@ -1,4 +1,6 @@
 Username=vijaymvj114@gmail.com
-Password=Vijaym@124
+Password=pass@123
 Url=https://dev.viewandhire.com/login
 Browser=Chrome
+InvalidUsername=vijaymvj114@gmail.com
+InvalidPassword=pass@1234
